center align banner content; fix stories carousel

--- a/jaam/static_media/api_demo/style/style.css
+++ b/jaam/static_media/api_demo/style/style.css
@@ -13,7 +13,7 @@ body {
     height: 474px;
     position: absolute;
     top: 0;
-    bottom: 120px; /*equal to footer height*/
+    bottom: 0;
     left: 0;
     right: 0;
     margin: auto;
